--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,9 @@ parts/
 sdist/
 var/
 wheels/
-<<<<<<< HEAD
+
 pip-wheel-metadata/
-=======
->>>>>>> da9cf2a857125b1a5dfae02d8c593aaba9db5094
+
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -53,10 +52,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-<<<<<<< HEAD
-=======
 cover/
->>>>>>> da9cf2a857125b1a5dfae02d8c593aaba9db5094
 
 # Translations
 *.mo
@@ -79,10 +75,7 @@ instance/
 docs/_build/
 
 # PyBuilder
-<<<<<<< HEAD
-=======
 .pybuilder/
->>>>>>> da9cf2a857125b1a5dfae02d8c593aaba9db5094
 target/
 
 # Jupyter Notebook
@@ -93,13 +86,10 @@ profile_default/
 ipython_config.py
 
 # pyenv
-<<<<<<< HEAD
 .python-version
-=======
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
->>>>>>> da9cf2a857125b1a5dfae02d8c593aaba9db5094
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -108,9 +98,7 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-<<<<<<< HEAD
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
-=======
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
@@ -127,7 +115,6 @@ ipython_config.py
 .pdm.toml
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
->>>>>>> da9cf2a857125b1a5dfae02d8c593aaba9db5094
 __pypackages__/
 
 # Celery stuff
@@ -163,9 +150,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-<<<<<<< HEAD
 .DS_Store
-=======
 
 # pytype static type analyzer
 .pytype/
@@ -173,10 +158,6 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
->>>>>>> da9cf2a857125b1a5dfae02d8c593aaba9db5094
+
+# developing 
+pdf2epub.py
